Revision history for App-skryf

{{$NEXT}}

0.011_1  2013-08-10 18:31:30 EDT
    - Extend wiki admin
    - Update style template

0.011  2013-08-09 23:56:38 EDT
    - Add wiki plugin
    - Add wiki test case

0.010  2013-08-05 23:48:12 EDT
    - Add fallback on dist's template directory

0.009_02  2013-08-05 23:03:21 EDT
    - New default theme

0.009_01  2013-08-05 13:28:36 EDT
    - Add unittests to cover ui, post model and user model
    - Add administration section for adding posts via the web

0.009  2013-08-04 21:35:26 EDT
    - Adding MongoDB support
    - Morphed into full Mojolicious application

0.008  2013-07-14 23:59:05 EDT
    - New release, adds following:
      - Disqus integration
      - Google Analytics

0.007_4  2013-07-11 00:35:43 EDT
    - Extended documentation

0.007_3  2013-07-09 15:39:51 EDT
    - Pull in configuration parameters from user defined config

0.007_2  2013-07-09 15:25:38 EDT
    - Just a test version

0.007_1  2013-07-09 15:23:20 EDT
    - 1804fa4 use milla
    - 5d4e64b autoload plugins from config
    - 121f2d3 update cpan reqs
    - 48065cd add disqus support
    - 569e734 add datetime format req
    - 2a5f43c update deploy docs