@@ -2,14 +2,13 @@ requires 'Carp';
 requires 'File::ShareDir';
 requires 'FindBin';
 requires 'Mojo::Base';
-requires 'Mojolicious::Lite';
+requires 'Mojolicious';
 requires 'Mojolicious::Plugin::Disqus::Tiny';
 requires 'Mojolicious::Plugin::GoogleAnalytics';
 requires 'Mojolicious::Plugin::Gravatar';
 requires 'Mojolicious::Plugin::CSRFDefender';
 requires 'Path::Tiny';
 requires 'Text::MultiMarkdown';
-requires 'Text::WikiCreole';
 requires 'Mango';
 requires 'String::Dirify';
 requires 'Method::Signatures';
