@@ -8,8 +8,6 @@
       &infin;
       %= link_to "New Post" => url_for('admin_blog_new')
       &infin;
-      %= link_to "New Wiki Page" => url_for('admin_wiki_new')
-      &infin;
       %= link_to "Logout" => url_for("logout")
     ]
     % }
