@@ -1,7 +1,6 @@
 % use DateTime::Format::RFC3339;
 % layout 'main';
   %= t 'div', class => 'wiki-body' => begin
-    %= t 'h2' => $page->{topic}
     % my $f = DateTime::Format::RFC3339->new;
     % my $dt = $f->parse_datetime($page->{created});
     Created <strong>on</strong> <%= $dt->strftime('%Y-%m-%d') %> <strong>@</strong> <%= $dt->strftime('%H:%M:%S') %>
@@ -16,6 +15,5 @@
       &infin;
       %= link_to "Edit" => url_for('admin_wiki_edit', { slug => $page->{slug} })
     % }
-    <%= disqus_inc config->{social}{disqus} || 'imnotset' %>
   %= end
 
