@@ -15,22 +15,18 @@ use_ok('App::skryf::Model::Page');
 
 my $model;
 
-my $topic = 'a wiki page';
-my $slug = 'a-wiki-page';
-my $content = '= heading 1';
+my $slug = 'WikiWord';
+my $content = 'WikiWord';
 
 $model = App::skryf::Model::Page->new;
 ok $model;
 ok $model->pages;
 #cleanup
 ok $model->pages->drop();
-ok $model->create($topic, $content);
+ok $model->create($slug, $content);
 my $page = $model->get($slug);
 ok $page;
-ok $page->{html} =~ /^<h1>heading\s1<\/h1>/;
-$page->{content} = '== heading 2';
-ok $model->save($page);
-ok $page->{html} =~ /^<h2>heading\s2<\/h2>/;
+ok $page->{html} =~ /<a href="WikiWord">WikiWord<\/a>/;
 ok $model->remove($slug);
 
 done_testing();
